algunas correcciones mínimas y de estilos

--- a/qrProducts/templates/404.html
+++ b/qrProducts/templates/404.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %}
 {% block body %}
-  <h4>Código inválido, favor de volver a intentar con un código correcto</h4>
+<div class="container-fluid">
+  <div class="row justify-content-md-center">
+    <div class="col-6">
+      <h4>Código inválido, favor de volver a intentar con un código correcto</h4>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
