--- a/qrProducts/templates/notFound.html
+++ b/qrProducts/templates/notFound.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %}
 {% block body %}
-  <h4>No hay elementos para mostrar</h4>
+<div class="container-fluid">
+  <div class="row justify-content-md-center">
+    <div class="col-6">
+      <h4>No hay elementos para mostrar 1</h4>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
