se agrega codificación base64 y se modifican algunos templates

--- a/qrProducts/templates/notFound.html
+++ b/qrProducts/templates/notFound.html
@@ -3,9 +3,8 @@
 <div class="container-fluid">
   <div class="row justify-content-md-center">
     <div class="col-6">
-      <h4>No hay elementos para mostrar 1</h4>
+      <h4>El código ingresado no es válido</h4>
     </div>
   </div>
 </div>
-
 {% endblock %}
