--- a/qrProducts/templates/404.html
+++ b/qrProducts/templates/404.html
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="container-fluid">
   <div class="row justify-content-md-center">
-    <div class="col-6">
+    <div class="col">
       <h4>Código inválido, favor de volver a intentar con un código correcto</h4>
     </div>
   </div>
