--- a/qrProducts/templates/notFound.html
+++ b/qrProducts/templates/notFound.html
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="container-fluid">
   <div class="row justify-content-md-center">
-    <div class="col-6">
+    <div class="col">
       <h4>El código ingresado no es válido</h4>
     </div>
   </div>
