--- a/qrProducts/templates/qr.html
+++ b/qrProducts/templates/qr.html
@@ -4,14 +4,14 @@
 <div class="container-fluid">
     <div class="row justify-content-md-center">
         {% if DataProduct %}
-        <div class="col-4">
+        <div class="col">
             <h1>
                 {{ DataProduct.name }}
             </h1>
             <h1>
                 Código: {{ DataProduct.code }}
             </h1>
-            
+
             <h2>
                 Precio: ${{ DataProduct.price}}
             </h2>
@@ -24,17 +24,17 @@
             </h4>
             <ul class="list-group">
                 {% for item in DataProduct.details %}
-                {% if item is defined%}
-                <li class="list-group-item">{{item}}</li>
-                {% endif %}
+                    {% if item != None %}
+                        <li class="list-group-item">{{item}}</li>
+                    {% endif %}
                 {% endfor%}
             </ul>
         </div>
         {% else %}
-            <div class="col-4">
-                <h4>No hay elementos para mostrar</h4>
-            </div>
-        {% endif %}    
+        <div class="col">
+            <h4>No hay elementos para mostrar</h4>
+        </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
